--- a/style.css
+++ b/style.css
@@ -199,3 +199,79 @@ nav ul li a {
 .colorimg{
     color: white;
 }
+
+
+/*Responsive*/
+@media (max-width: 320px) {
+    .hero h1 {
+        font-size: 1.5em;
+    }
+
+    .hero p {
+        font-size: 1em;
+    }
+
+    .project-card {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .hero h1 {
+        font-size: 2em;
+    }
+
+    .hero p {
+        font-size: 1.1em;
+    }
+
+    .project-card {
+        width: 45%;
+    }
+}
+
+@media (max-width: 768px) {
+    .hero h1 {
+        font-size: 2.2em;
+    }
+
+    .hero p {
+        font-size: 1.2em;
+    }
+
+    .project-card {
+        width: 45%;
+    }
+}
+
+@media (max-width: 1024px) {
+    .hero h1 {
+        font-size: 2.5em;
+    }
+
+    .hero p {
+        font-size: 1.2em;
+    }
+
+    .project-card {
+        width: 45%;
+    }
+}
+
+@media (max-width: 1280px) {
+    .project-card {
+        width: 30%;
+    }
+}
+
+@media (max-width: 1440px) {
+    .project-card {
+        width: 30%;
+    }
+}
+
+@media (max-width: 1920px) {
+    .project-card {
+        width: 30%;
+    }
+}
